--- a/web/index.html
+++ b/web/index.html
@@ -5,9 +5,10 @@
 <body>
 	<h1>  Hello Adhoc Networks  , docker is love  </h1>
 <h2> Ok Fine its cool </h2>
+	<h1> Holla Docker  </h1>
 	<marquee> <img  src="docker.jpg">  </marquee>
 	<marquee> <img  src="docker.jpg">  </marquee>
 	<marquee> <img  src="docker.jpg">  </marquee>
-	<img  src="dockeree.png">
+	
 </body>
 </html>
